# STERO

./: CMakeLists.txt  README.md  package.xml
config/: elektron_Tower_control.yaml
config/.robots/: elektron_Laser_Tower-kinect.urdf.xacro  elektron_Laser_Tower-rgb.urdf.xacro
launch/: doors.launch  elektron_world.launch  lab2.launch  laser.launch  proj2.launch
maps/: holes1.yaml
maps/corridor/: model.sdf
maps/corridor_nosymetric/: model.config  model.sdf
maps/corridor_symetric/: model.config  model.sdf
maps/corridor_symetric1/corridor_symetric1/: model.config  model.sdf
maps/holes/: holes.yaml  model.config  model.sdf
maps/holes1/: model.sdf
maps/navigation/: base_local_planner.yaml  costmap_common.yaml  global_costmap.yaml  global_planner.yaml  local_costmap.yaml
scripts/: comands  stop.py
scripts/lab1/: lab1 (copy).py  lab1_task1_publisher.py  lab1_task1_subscriber.py  lab1_task2_publisher.py  lab1_task2_subscriber.py  lab1_task2_subscriber_laser.py  rosbag_plotter.py  test.py  tutuneareleright.bag
scripts/lab1/bag_files/: con_laser_line1.bag  con_laser_turn.bag  con_line.bag  con_line_laser.bag  con_square_left.bag  con_square_left_laser.bag  con_turn_left.bag  con_turn_left_laser.bag  line.bag  line_laser.bag  no_tune_laser_turn.bag  no_tune_laser_turn1.bag  no_tune_square_laser.bag  no_tune_square_no_laser.bag  no_tune_turn.bag  square_l_laser.bag  square_left.bag  square_r_laser.bag  square_right.bag  test.bag  test1.bag  test2.bag  turn_laser.bag  turn_left.bag
scripts/lab2/: lab2_subscriber.py
scripts/proj2/: proj2.cpp
worlds/: corridor.world  corridor_nosymetric.world  corridor_sym.world  corridor_symetric1_world  final.world  holes1_world.world  holes_world.world
worlds/final/: model.sdf
